--- a/session_2/index.html
+++ b/session_2/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="one">
+    <div class="container">
+        <div class="one">
         <h2>Let`s Chat</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, voluptatibus.</p>
         <p >Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
@@ -23,6 +24,7 @@
             <textarea name="Message"  placeholder="Message"></textarea>
             <input type="submit">
         </form>
+    </div>
     </div>
 </body>
 </html>
