--- a/session_9/index.html
+++ b/session_9/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar navbar-expand-lg mt-3">
         <div class="container">
-            <div class="logo d-flex align-items-center text-success">
+            <div class="logo d-flex align-items-center text-success fs-3">
                 <i class="fa-regular fa-face-smile "></i>
-                <h6 class="ms-2 mb-0">Logo</h6>
+                <h6 class="ms-2 mb-0 fs-3"">Logo</h6>
             </div>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -152,34 +152,33 @@
                 </div>
             </div>
         </section>
-        <section class="my-5 position-relative">
-            <div class="position-relative" style="height:800px;">
-                <img class="w-100 rounded-3 object-fit-cover" src="images/cover.jpg" alt="" style="height: 80%;">
-                <div class="row position-absolute top-0 justify-content-center text-center w-100 p-5 my-5">
-                    <div class="col-8 col-xl-6 text-white">
-                        <i class="fa-solid fa-leaf fa-2x border border-2 p-4 rounded-3 my-4 "></i>
+        <section class="my-5">
+            <div class=" "  style="background-image: url(images/cover.jpg); background-size:150%; background-position: center;">
+                <div class="row justify-content-center text-center w-100 p-5 my-lg-5 position-relative">
+                    <div class="col-10 col-xl-6 text-white">
+                        <i class="fa-solid fa-leaf  border border-2 p-3 p-lg-4 rounded-3 mb-4 "></i>
                         <h2>Wellbeing starts with welldoing</h2>
-                        <p class="my-4">
+                        <p class="my-4 d-none d-lg-block">
                             Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. 
                             Diam lacus platea orci vel elit blandit facilisis enim risus. 
                             Ut tristique eget integer odio nec.
                         </p>
-                        <button class="btn rounded-pill px-5 py-2 bg-transparent border-2 border-white text-white fw-semibold my-4">Join now</button>
+                        <button class="btn rounded-pill px-5 py-2 bg-transparent border-2 border-white text-white fw-semibold my-3">Join now</button>
                     </div>
-                    <div class="row bg-warning py-5 px-3 my-xl-5 rounded-3">
-                        <div class="col-12 col-lg-6 col-xl-3 ">
+                    <div class="row position-absolute top-100 ms-auto bg-warning py-xl-5 pb-5 px-1 my-xl-5 rounded-3 w-75">
+                        <div class="col-10 col-lg-6 col-xl-3 mx-auto">
                             <div class="rounded-circle p-2 border border-2 border-black d-flex justify-content-center align-items-center mx-auto mt-5 mb-3" style="height: 70px; width: 70px;" >
                                 <i class="fa-solid fa-seedling fa-2x "></i>
                             </div>
                             <h4 class="mb-xl-5">Plant Protective</h4>
                         </div>
-                        <div class="col-12 col-lg-6 col-xl-3 ">
+                        <div class="col-10 col-lg-6 col-xl-3 mx-auto">
                             <div class="rounded-circle p-2 border border-2 border-black d-flex justify-content-center align-items-center mx-auto mt-5 mb-3" style="height: 70px; width: 70px;" >
                                 <i class="fa-solid fa-seedling fa-2x "></i>
                             </div>
                             <h4 class="mb-xl-5">Plant Protective</h4>
                         </div>
-                        <div class="col-12 col-lg-6 col-xl-3 ">
+                        <div class="col-10 col-lg-6 col-xl-3 mx-auto">
                             <div class="rounded-circle p-2 border border-2 border-black d-flex justify-content-center align-items-center mx-auto mt-5 mb-3" style="height: 70px; width: 70px;" >
                                 <i class="fa-solid fa-seedling fa-2x "></i>
                             </div>
@@ -193,44 +192,37 @@
                         </div>
                     </div>
                 </div>
+                <p style="height: 100px;"></p>
             </div>
+            <p style="height: 600px;" class="d-lg-none"></p>
+            <p style="height: 220px;" class="d-none d-lg-block d-xl-none"></p>
+            <p style="height: 200px;" class="d-none d-xl-block"></p>
         </section>
-        <footer class="bg-dark mt-5 p-5">
-            <nav class="navbar navbar-expand-lg mt-3 text-white">
-                <div class="container">
-                    <div class="logo d-flex align-items-center">
-                        <i class="fa-regular fa-face-smile "></i>
-                        <h6 class="ms-2 mb-0">Logo</h6>
-                    </div>
-                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
-                            <li class="nav-item " >
-                                <a class="nav-link text-white " href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Team</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+    </div>
+    <footer class="bg-dark mt-5 p-5">
+            <div class="row justify-content-center justify-content-lg-start g-4 align-items-center">
+                <div class="col-7 col-lg-12 col-xl-8 logo d-flex align-items-center text-white fs-2">
+                    <i class="fa-regular fa-face-smile "></i>
+                    <h6 class="ms-2 mb-0 fs-2">Logo</h6>
                 </div>
-            </nav>
-            <div class="div text-white">
-                <i class="fa-brands fa-twitter mx-2"></i>
-                <i class="fa-brands fa-instagram mx-2"></i>
-                <i class="fa-brands fa-linkedin mx-2"></i>
-                <i class="fa-brands fa-square-facebook mx-2"></i>
+                <div class="col-7 col-lg-2 d-flex justify-content-between justify-content-xl-around p-xl-0">
+                    <a class="nav-link text-white" href="#">About</a>
+                    <a class="nav-link text-white" href="#">Services</a>
+                </div>
+                <div class="col-7  col-lg-2 d-flex justify-content-between justify-content-xl-around p-xl-0">
+                    <a class="nav-link text-white" href="#">Team</a>
+                    <a class="nav-link text-white" href="#">Contact</a>
+                </div>
+                <div class="row justify-content-between mt-4 p-0">
+                    <div class="col-7 mx-auto mx-lg-4 p-lg-0 col-lg-3 d-flex justify-content-between text-white fs-4">
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                </div>
+                </div>
             </div>
         </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
