fix some spaces

--- a/session_9/index.html
+++ b/session_9/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="logo d-flex align-items-center text-success fs-3">
                 <i class="fa-regular fa-face-smile "></i>
-                <h6 class="ms-2 mb-0 fs-3"">Logo</h6>
+                <h6 class="ms-2 mb-0 fs-3">Logo</h6>
             </div>
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -137,13 +137,13 @@
                     <h2 class="display-4 fw-semibold mb-5">You are what you eat</h2>
                     <div class="row justify-content-between  g-5">
                         <div class="col-12 col-lg-6 col-xl-5 ">
-                            <i class="fa-solid fa-leaf bg-danger p-3 rounded-3 mb-3 text-black"></i>
+                    <i class="fa-solid fa-leaf bg-danger p-3 rounded-3 mb-3 text-black"></i>
                             <p class="mb-0">
                                 Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.
                             </p>
                         </div>
                         <div class="col-12 col-lg-6 col-xl-5">
-                            <i class="fa-solid fa-leaf bg-danger p-3 rounded-3 mb-3 text-black"></i>
+                        <i class="fa-solid fa-leaf bg-danger p-3 rounded-3 mb-3 text-black"></i>
                             <p class="mb-0">
                                 Lorem ipsum dolor sit amet consectetur. Quam ut consequat at a. Diam lacus platea orci vel elit.
                             </p>
