--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -15,6 +15,7 @@
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/media.css" />
+  
 </head>
 
 <body>
@@ -195,7 +196,8 @@
   </nav>
   <!-- End Navbar -->
   <!-- Start Slider Section -->
-  <div id="carouselExampleCaptions" class="carousel slide">
+   <!-- data-bs-ride="carousel" -->
+  <div id="carouselExampleCaptions" class="carousel slide" >
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
         aria-current="true" aria-label="Slide 1"></button>
@@ -209,7 +211,26 @@
     <div class="carousel-inner w-100">
       <div class="carousel-item active">
         <img src="Images/ecommerce-cover-2.jpg" class="d-block w-100" alt="..." />
-        <div class="carousel-caption bg-black bg-opacity-75 w-100 h-100 top-0 start-0"></div>
+        <div class="carousel-caption bg-black bg-opacity-75 w-100 h-100 top-0 start-0 d-flex align-items-center justify-content-center">
+          <div class="col-10 col-lg-8">
+            <h2 class="animate__animated animate__backInRight mb-4">
+              What You Do Today For Peoples1
+            </h2>
+            <p class="d-none d-md-block animate__animated animate__bounceInRight animate__delay-1s my-4">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Delectus voluptatem magnam enim sit error. Dolorum eius sunt
+              dignissimos quibusdam earum.
+            </p>
+            <div class="animate__animated animate__fadeInUp animate__delay-1s">
+              <button class="glassy-btn">
+                <a href="#">Get Started Now</a>
+              </button>
+              <button class="btn btn-outline-light rounded-pill py-2 px-4 fw-bold">
+                Contact US
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="Images/slider1.jpg" class="d-block w-100" alt="..." />
@@ -225,8 +246,8 @@
               dignissimos quibusdam earum.
             </p>
             <div class="animate__animated animate__fadeInUp animate__delay-1s">
-              <button class="btn btn-primary rounded-pill py-2 px-4 fw-bold">
-                Get Started Now
+              <button class="glassy-btn">
+                <a href="#">Get Started Now</a>
               </button>
               <button class="btn btn-outline-light rounded-pill py-2 px-4 fw-bold">
                 Contact US
