--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -188,7 +188,7 @@
             </ul>
           </li>
           <li class="nav-item py-3">
-            <a class="nav-link text-uppercase" href="#">Contact</a>
+            <a class="nav-link text-uppercase" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
