--- a/Final_Project/contact.html
+++ b/Final_Project/contact.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/media.css" />
 </head>
+
 <body>
   <!-- Start Header -->
   <header class="bg-primary text-white py-3 d-none d-lg-block">
@@ -66,7 +67,7 @@
       <div class="collapse navbar-collapse mt-3 ps-3" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-5 mb-lg-0">
           <li class="nav-item dropdown py-3">
-            <a class="nav-link dropdown-toggle text-uppercase" href="#" role="button" data-bs-toggle="dropdown"
+            <a class="nav-link dropdown-toggle text-uppercase" href="index.html" role="button" data-bs-toggle="dropdown"
               aria-expanded="false">
               Home
             </a>
@@ -199,6 +200,290 @@
     <i class="fa-solid fa-chevron-up fa-2x"></i>
   </button>
   <!-- End Fixed Right Button -->
+  <!-- Start Main Section -->
+  <section id="carouselExampleCaptions" style="height: 400px;" class="overflow-hidden position-relative">
+    <img src="Images/slider1.jpg" alt="" class="img-fluid">
+    <div class="position-absolute w-100 h-75 top-0 d-flex justify-content-center
+    align-items-center bg-black opacity-75">
+      <h2 class="m-0 text-white fs-1">Contact</h2>
+    </div>
+    <div class="position-absolute w-100 h-25 bottom-0 d-flex justify-content-center
+    align-items-center bg-black" style="opacity: 85%;">
+      <a href="index.html" class="text-decoration-none text-white text-uppercase">Home</a>
+      <i class="fa-solid fa-angle-right mx-3 text-white"></i>
+      <a href="contact.html" class="text-decoration-none text-secondary text-uppercase">Contact</a>
+    </div>
+
+  </section>
+  <!-- End Main Section -->
+  <!-- Start Contact Section -->
+  <section class="contact-info section-padding">
+    <div class="container">
+      <div class="row">
+        <div class="d-flex justify-content-center align-items-center mt-5 mb-3 services-heading">
+          <span class="col-1">
+            <hr class="w-50 m-0 mb-2 ms-auto border border-primary opacity-100">
+            <hr class="m-0  border border-primary opacity-100">
+          </span>
+          <h2 class="fs-1 fw-semibold m-0 mx-3 ">Contact Info</h2>
+          <span class="col-1 ">
+            <hr class="w-50 m-0 mb-2  border border-primary opacity-100">
+            <hr class="m-0  border border-primary opacity-100">
+          </span>
+        </div>
+      </div>
+      <div class="row mt-4 justify-content-center g-3">
+        <div class="col-6 col-lg-4 px-3">
+          <div class="text-center">
+            <i class="fa-solid fa-location-dot fs-1 text-primary mb-3"></i>
+            <h5>Addres</h5>
+            <p class="text-secondary my-3">267-A , Street Name Park Sera Avenue , New York, NY 90210</p>
+          </div>
+        </div>
+        <div class="col-6 col-lg-4 px-3">
+          <div class="text-center">
+            <i class="fa-solid fa-phone-volume fs-1 text-primary mb-3"></i>
+            <h5>Call Us</h5>
+            <p class="text-secondary my-3">Phone 1 : (+098) 7654 3210</p>
+          </div>
+        </div>
+        <div class="col-6 col-lg-4 px-3">
+          <div class="text-center">
+            <i class="fa-solid fa-envelope fs-1 text-primary mb-3"></i>
+            <h5>Email</h5>
+            <p class="text-secondary my-3">support@company.com</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Contact Section -->
+  <!-- Start In Touch Section -->
+  <!-- End In Touch Section -->
+  <section class="section-padding pt-0">
+    <div class="container">
+      <div class="row">
+        <div class="d-flex justify-content-center align-items-center mt-5 mb-3 services-heading">
+          <span class="col-1">
+            <hr class="w-50 m-0 mb-2 ms-auto border border-primary opacity-100">
+            <hr class="m-0  border border-primary opacity-100">
+          </span>
+          <h2 class="fs-1 fw-semibold m-0 mx-3 ">Get In Touch</h2>
+          <span class="col-1 ">
+            <hr class="w-50 m-0 mb-2  border border-primary opacity-100">
+            <hr class="m-0  border border-primary opacity-100">
+          </span>
+        </div>
+      </div>
+      <form action="#" id="contactForm">
+        <div class="row my-4 g-5">
+          <div class="col-12 col-lg-4 px-3">
+            <div class="position-relative">
+              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="name"
+                placeholder="Name">
+              <div class="position-absolute  top-0 d-flex align-items-center ps-3">
+                <i class="fa-solid fa-user p-2"></i>
+              </div>
+              <div class="pt-1 opacity-0" id="nameError">
+                <p class="text-danger">The field is required.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-4 px-3">
+            <div class="position-relative">
+              <input type="email" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="email"
+                placeholder="Email">
+              <div class="position-absolute top-0 d-flex align-items-center ps-3">
+                <i class="fa-solid fa-envelope p-2"></i>
+              </div>
+              <div class="pt-1 opacity-0" id="emailError">
+                <p class="text-danger">Invalid email address.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-lg-4 px-3">
+            <div class="position-relative">
+              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="subject"
+                placeholder="Subject">
+              <div class="position-absolute top-0 d-flex align-items-center ps-3">
+                <i class="fa-solid fa-pencil p-2"></i>
+              </div>
+              <div class="pt-1 opacity-0" id="subjectError">
+                <p class="text-danger">The field is required.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 px-3">
+            <div class="position-relative">
+              <textarea name="message" id="message" placeholder="Your Message"
+                class="w-100 ps-5 rounded-0 border-0 border-bottom border-black"
+                style="max-width: 100%; min-height: 120px;"></textarea>
+              <div class="position-absolute pt-1 top-0 d-flex align-items-center ps-3">
+                <i class="fa-solid fa-pencil"></i>
+              </div>
+            </div>
+          </div>
+
+          <button type="submit" class="glassy-btn bg-primary ms-3 text-white">
+            Send Message
+          </button>
+        </div>
+      </form>
+    </div>
+  </section>
+  <!-- Start Call Section -->
+  <section class="section-padding bg-primary">
+    <div class="container">
+      <div class="row justify-content-between align-items-center">
+        <div class="col-12 col-md-9 position-relative">
+          <h3 class="text-white text-capitalize my-2">if you like this grate work ?? for you site...</h3>
+          <div class="icon position-absolute top-0 d-none d-xl-block" style="left: 25%;">
+            <i class="fa-solid fa-phone-volume text-white opacity-50" style="font-size: 60px;"></i>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 d-flex justify-content-evenly my-2">
+          <button class="btn bg-white glassy-btn special-btn">
+            <a href="#" class="fw-semibold">Purchase Now</a>
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Call Section -->
+  <!-- Start Footer Section -->
+  <footer class="section-padding bg-dark">
+    <div class="container">
+      <div class="row g-5 mb-5">
+        <div class="col-12 col-md-6 col-lg-4 px-3 text-white">
+          <div>
+            <div class="tittle mb-5">
+              <h2 class="m-0">Contact Info</h2>
+              <hr class="border-3 border-primary opacity-100 w-25 my-2">
+            </div>
+            <div class="row mt-3 justify-content-between">
+              <div class="icon col-1">
+                <i class="fa-solid fa-location-dot fs-5"></i>
+              </div>
+              <div class="col-11">
+                <p>123 Street Market, Life Plaza, New York</p>
+              </div>
+            </div>
+            <div class="row mt-3 justify-content-between">
+              <div class="icon col-1">
+                <i class="fa-solid fa-phone-volume fs-5"></i>
+              </div>
+              <div class="col-11">
+                <p>987654321</p>
+              </div>
+            </div>
+            <div class="row mt-3 justify-content-between">
+              <div class="icon col-1">
+                <i class="fa-solid fa-envelope fs-5"></i>
+              </div>
+              <div class="col-11">
+                <p>team@gmail.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 px-3 text-white">
+          <div>
+            <div class="tittle mb-5">
+              <h2 class="m-0">Posts</h2>
+              <hr class="border-3 border-primary opacity-100 w-25 my-2">
+            </div>
+            <div class="row">
+              <div class="col-4">
+                <img src="Images/gallery2-1-360x260.png" alt="" class="d-block w-100 h-100">
+              </div>
+              <div class="col-8">
+                <p class="m-0 mb-2">Four ways to cheer and plan your self up on Blue</p>
+                <i class="fa-solid fa-calendar-days text-secondary"></i>
+                <span class="text-secondary">December 19, 2018</span>
+              </div>
+            </div>
+            <hr class="border-2">
+            <div class="row">
+              <div class="col-4">
+                <img src="Images/bg3-360x260.jpg" alt="" class="d-block w-100 h-100">
+              </div>
+              <div class="col-8">
+                <p class="m-0 mb-2">Four ways to cheer and plan your self up on Blue</p>
+                <i class="fa-solid fa-calendar-days text-secondary"></i>
+                <span class="text-secondary">December 19, 2018</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4 px-3 text-white">
+          <div>
+            <div class="tittle mb-5">
+              <h2 class="m-0">Popular</h2>
+              <hr class="border-3 border-primary opacity-100 w-25 my-2">
+            </div>
+            <div class="row g-3">
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Accountary</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Affiliate</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Branding</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Construction</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Design</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Drupal</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Education</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Graphics</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Joomla</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Marketing</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Money</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Tally</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Transform</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Website</a>
+              </button>
+              <button class="btn bg-white rounded-pill w-auto footer-btn mx-1">
+                <a href="" class="text-decoration-none text-dark">Wordpress</a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- End Footer Section -->
+  <!-- Start Copyright Section -->
+  <footer class="py-4 bg-dark Copyright-foot">
+    <div class="container text-center">
+      <a href="" class="text-decoration-none">&copy; 2019 Developed By DTM Theme</a>
+    </div>
+  </footer>
+  <!-- End Copyright Section -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
     crossorigin="anonymous"></script>
