--- a/Final_Project/contact.html
+++ b/Final_Project/contact.html
@@ -279,8 +279,8 @@
         <div class="row my-4 g-5">
           <div class="col-12 col-lg-4 px-3">
             <div class="position-relative">
-              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="name"
-                placeholder="Name">
+              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none"
+                id="name" placeholder="Name">
               <div class="position-absolute  top-0 d-flex align-items-center ps-3">
                 <i class="fa-solid fa-user p-2"></i>
               </div>
@@ -292,8 +292,8 @@
 
           <div class="col-12 col-lg-4 px-3">
             <div class="position-relative">
-              <input type="email" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="email"
-                placeholder="Email">
+              <input type="email" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none"
+                id="email" placeholder="Email">
               <div class="position-absolute top-0 d-flex align-items-center ps-3">
                 <i class="fa-solid fa-envelope p-2"></i>
               </div>
@@ -305,8 +305,8 @@
 
           <div class="col-12 col-lg-4 px-3">
             <div class="position-relative">
-              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none" id="subject"
-                placeholder="Subject">
+              <input type="text" class="form-control ps-5 rounded-0 border-0 border-bottom border-black shadow-none"
+                id="subject" placeholder="Subject">
               <div class="position-absolute top-0 d-flex align-items-center ps-3">
                 <i class="fa-solid fa-pencil p-2"></i>
               </div>
@@ -484,7 +484,8 @@
     </div>
   </footer>
   <!-- End Copyright Section -->
-  
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
