--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -597,13 +597,13 @@
       </div>
       <div class="row">
         <div class="text-center my-3">
-          <button class="btn filter-btn border-0" data-filter="all">All</button>
+          <button class="btn work-filter-btn border-0 active" data-filter="all">All</button>
           <span class="mx-3">/</span>
-          <button class="btn filter-btn border-0" data-filter="creative">Creative Design</button>
+          <button class="btn work-filter-btn border-0" data-filter="creative">Creative Design</button>
           <span class="mx-3">/</span>
-          <button class="btn filter-btn border-0" data-filter="development">Development</button>
+          <button class="btn work-filter-btn border-0" data-filter="development">Development</button>
           <span class="mx-3">/</span>
-          <button class="btn filter-btn border-0" data-filter="graphic">Graphic Design</button>
+          <button class="btn work-filter-btn border-0" data-filter="graphic">Graphic Design</button>
         </div>
         <div class="row g-3" id="product-list">
           <div class="col-6 col-lg-4 product" data-category="creative">
@@ -893,11 +893,11 @@
       </div>
       <div class="row justify-content-center my-5 ">
         <div class="col-4 col-lg-3 col-xl-2  p-0">
-          <button class="btn filter-btn btn-primary rounded-start-pill p-3 px-4 w-100 fw-semibold"
+          <button class="btn pricing-filter-btn btn-primary rounded-start-pill p-3 px-4 w-100 fw-semibold"
             data-filter="month">Per / Month</button>
         </div>
         <div class="col-4 col-lg-3 col-xl-2 p-0">
-          <button class="btn filter-btn btn-outline-primary rounded-end-pill p-3 px-4 w-100 fw-semibold"
+          <button class="btn pricing-filter-btn btn-outline-primary rounded-end-pill p-3 px-4 w-100 fw-semibold"
             data-filter="year">Per / Year</button>
         </div>
       </div>
@@ -1650,6 +1650,8 @@
     </div>
   </footer>
   <!-- End Copyright Section -->
+
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
